Fixed: Long titles appear over 3 lines. Is it possible to define wrapping point for titles?

--- a/themes/hush/src/sass/modules/content-page/_desktop.sass
+++ b/themes/hush/src/sass/modules/content-page/_desktop.sass
@@ -87,6 +87,7 @@
     margin-bottom: 0px
   .contentPage__ContentSection__title
     font-size: 32px
+    max-width: 800px
 @media screen and (min-width : 960px)
   .contentPage__item__picture
     max-width: 35%
